--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "debug": "~2.2.0",
     "request": "^2.79.0"
   },
-  "description": "this module for retive rate money of bank in lao",
+  "description": "module for retrieve money rate some big bank in laos",
   "main": "index.js",
   "repository": "https://github.com/xang555/rate-banklao",
   "author": "xang <xang.ultimate@gmail.com> (http://xangnam.com)",
